--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
                             <div class="box-text card__box">
                                 <div class="card__text">
                                     <ul>
-                                        <li>HTML5, CSS3</li>
+                                        <li>HTML5, CSS3, SASS</li>
                                         <li>JavaScript + React</li>
-                                        <li>SQL</li>
+                                        <li>WebPack, Gulp</li>
                                     </ul>
                                 </div>
 
